src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DuplicateNameInControlTemplate.xaml
<Page
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>    
        <Page.Resources>
            <ControlTemplate TargetType="{x:Type Button}" x:Key="myControlTemplate">
                <Border>
                    <TextBlock x:Name="name">
                        <TextBlock Name="name" />
                    </TextBlock>
                </Border>
            </ControlTemplate>
        </Page.Resources>
</Page>

